@@ -322,15 +322,20 @@ class block_taskchain_navigation extends block_base {
             $data->showactivitygrades = implode(',', $data->showactivitygrades);
             $js .= "<script type=\"text/javascript\">\n";
             $js .= "//<![CDATA[\n";
-            $js .= "var src = location.href.replace(new RegExp('^(.*?)/course/view.php.*\$'), '\$1');\n";
-            $js .= "src += '/mod/taskchain/courselinks.js.php?id=';\n";
-            $js .= "src += location.href.replace(new RegExp('^.*?id=([0-9]+).*\$'), '\$1');\n";
-            $js .= "src += '&rnd='+Math.ceil(10000*Math.random());\n";
-            $js .= "src += '&showgrades=1';\n";
-            $js .= "src += '&showaverages={$data->showaverages}';\n";
-            $js .= "src += '&displayasblock=1';\n";
-            $js .= "src += '&mods={$data->showactivitygrades}';\n";
-            $js .= "document.writeln('<scr'+'ipt type=\"text/javascr'+'ipt\" src=\"'+src+'\"></scr'+'ipt>');\n";
+            $js .= "(function(){\n";
+            $js .= "    var src = location.href.substr(0, location.href.indexOf('/course/'));\n";
+            $js .= "    src += '/mod/taskchain/courselinks.js.php?id=';\n";
+            $js .= "    src += location.href.replace(new RegExp('^.*?id=([0-9]+).*\$'), '\$1');\n";
+            $js .= "    src += '&rnd=' + Math.ceil(10000 * Math.random());\n";
+            $js .= "    src += '&showgrades=1';\n";
+            $js .= "    src += '&showaverages={$data->showaverages}';\n";
+            $js .= "    src += '&displayasblock=1';\n";
+            $js .= "    src += '&mods={$data->showactivitygrades}';\n";
+            $js .= "    var script = document.createElement(\"SCRIPT\");\n";
+            $js .= "    script.src = src;\n";
+            $js .= "    script.async = true;\n";
+            $js .= "    document.head.appendChild(script);\n";
+            $js .= "})();\n";
             $js .= "//]]>\n";
             $js .= "</script>\n";
         }
