@@ -2,6 +2,9 @@
 Change log for block_taskchain_navigation
 ========================================
 
+2022-07-08 (31)
+ - improve insertion of script to display grades on course page by not using document.write().
+
 2022-03-02 (30)
  - add zerbra stripes on settings regardlesss of whether not the 'mycourses' element is present
 
